--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <i class="fa-solid fa-bolt text-cyan-300 text-lg"></i>
           </div>
           <div class="text-right">
-            <h2 class="text-lg font-black text-white/95">بوابة اللجنة العلمية</h2>
-            <p class="text-[10px] text-white/40 uppercase tracking-wider">Electrical Engineering Club</p>
+            <h2 class="text-lg font-black tracking-tight text-white/95">بوابة اللجنة العلمية</h2>
+            <p class="text-[10px] text-white/40 font-medium uppercase">Electrical Engineering Club</p>
           </div>
         </div>
         <button id="closeSidebar" class="w-9 h-9 rounded-xl flex items-center justify-center hover:bg-white/5 transition-colors group">
@@ -48,7 +48,7 @@
         </a>
         <a href="faculty.html" class="flex items-center gap-3 px-4 py-3 rounded-2xl hover:bg-white/5 transition group">
           <i class="fa-solid fa-user-tie text-indigo-300/70 group-hover:text-indigo-300 w-5 text-center"></i>
-          <span class="text-sm font-medium">بحث هيئة التدريس</span>
+          <span class="text-sm font-medium">هيئة التدريس</span>
         </a>
         <div class="py-3"><hr class="border-white/5"></div>
         <a href="https://jic.blackboard.com" target="_blank" class="flex items-center gap-3 px-4 py-3 rounded-2xl hover:bg-white/5 transition group">
@@ -57,10 +57,10 @@
         </a>
       </nav>
     </div>
-    
+
     <div class="mt-auto p-4 border-t border-white/5">
       <div class="flex items-center gap-2.5 opacity-40">
-        <div class="w-7 h-7 rounded-lg bg-white/5 border border-white/5 flex items-center justify-center">
+        <div class="w-7 h-7 rounded-lg bg-white/[0.03] flex items-center justify-center border border-white/5">
           <i class="fa-solid fa-user-ninja text-[10px] text-indigo-400"></i>
         </div>
         <div class="flex flex-col border-r border-white/10 pr-2.5">
@@ -78,7 +78,7 @@
       </button>
       <div class="flex items-center gap-3 text-right">
         <div>
-          <h1 class="text-lg font-extrabold text-white">بوابة اللجنة العلمية</h1>
+          <h1 class="text-lg font-extrabold">بوابة اللجنة العلمية</h1>
           <p class="text-xs text-white/60">Electrical Engineering Club</p>
         </div>
         <div class="w-11 h-11 rounded-2xl flex items-center justify-center glass">
@@ -86,56 +86,61 @@
         </div>
       </div>
     </div>
+
     <div class="mt-8 glass rounded-[2.25rem] p-7 md:p-10 text-center max-w-5xl mx-auto">
-      <h2 class="text-4xl md:text-3xl font-black leading-tight text-white">اللجنة العلمية</h2>
-      <p class="mt-3 max-w-xl mx-auto text-sm text-white/70">مبادرة علمية لدعم طلاب قسم الهندسة الكهربائية.</p>
+      <h2 class="text-4xl md:text-3xl font-black leading-tight">اللجنة العلمية</h2>
+      <p class="mt-3 max-w-xl mx-auto text-sm text-white/70 leading-7">مبادرة علمية تهدف إلى دعم طلاب قسم الهندسة الكهربائية وتسهيل الوصول للمصادر التعليمية.</p>
     </div>
   </header>
 
   <main class="px-4 sm:px-6 pb-10">
     <div class="max-w-5xl mx-auto">
-      
       <section class="mt-8 glass rounded-[2.25rem] p-6 sm:p-8 text-center">
-        <h3 class="text-2xl font-black text-white">المنصات والخدمات الأكاديمية</h3>
+        <h3 class="text-2xl font-black">المنصات والخدمات الأكاديمية</h3>
         <div class="mt-7 w-full max-w-md mx-auto space-y-4">
           <div class="flex gap-3">
-            <a href="https://jic.blackboard.com" target="_blank" class="btn-brand w-1/2 py-3 rounded-2xl font-extrabold text-sm shadow-lg text-white">
-              <i class="fa-solid fa-graduation-cap ml-2"></i> البلاك بورد
+            <a href="https://jic.blackboard.com" target="_blank" class="btn-brand w-1/2 py-3 rounded-2xl font-extrabold text-sm shadow-lg flex items-center justify-center gap-2">
+              <i class="fa-solid fa-graduation-cap"></i> البلاك بورد
             </a>
-            <a href="#" target="_blank" class="btn-brand w-1/2 py-3 rounded-2xl font-extrabold text-sm shadow-lg text-white">
-              <i class="fa-solid fa-globe ml-2"></i> الايدوقيت
+            <a href="https://edugate.rcjy.edu.sa/jyup/init" target="_blank" class="btn-brand w-1/2 py-3 rounded-2xl font-extrabold text-sm shadow-lg flex items-center justify-center gap-2">
+              <i class="fa-solid fa-globe"></i> الايدوقيت
             </a>
           </div>
           <div class="flex gap-3">
-            <a href="flowcharts.html" class="flex-1 group glass-card p-4 rounded-2xl border border-white/10 hover:border-cyan-500/40 transition-all">
-              <i class="fa-solid fa-diagram-project text-cyan-400 text-lg block mb-2"></i>
+            <a href="flowcharts.html" class="flex-1 group relative flex flex-col items-center justify-center gap-2 py-4 rounded-2xl border border-white/10 bg-white/[0.02] hover:border-cyan-500/40 transition-all">
+              <i class="fa-solid fa-diagram-project text-cyan-400/80 group-hover:text-cyan-400 text-lg"></i>
               <span class="font-bold text-xs text-white/70">فلوشارت التخصصات</span>
             </a>
-            <a href="schedule.html" class="flex-1 group glass-card p-4 rounded-2xl border border-white/10 hover:border-emerald-500/40 transition-all">
-              <i class="fa-solid fa-calendar-plus text-emerald-400 text-lg block mb-2"></i>
+            <a href="schedule.html" class="flex-1 group relative flex flex-col items-center justify-center gap-2 py-4 rounded-2xl border border-white/10 bg-white/[0.02] hover:border-emerald-500/40 transition-all">
+              <i class="fa-solid fa-calendar-plus text-emerald-400/80 group-hover:text-emerald-400 text-lg"></i>
               <span class="font-bold text-xs text-white/70">أنشئ جدولك</span>
             </a>
           </div>
         </div>
       </section>
 
-      <section class="mt-6 glass rounded-[2rem] p-8 text-center relative overflow-hidden">
-        <h3 class="text-xl md:text-2xl font-black mb-2 text-white">شاركنا مصادرك الدراسية</h3>
-        <button id="openUploadBtn" class="mt-4 btn-ghost rounded-2xl py-4 px-10 flex items-center gap-4 mx-auto group">
-          <div class="w-10 h-10 rounded-xl bg-indigo-500/20 flex items-center justify-center text-indigo-400 group-hover:scale-110 transition">
-            <i class="fa-solid fa-cloud-arrow-up text-lg"></i>
-          </div>
-          <div class="text-right text-white">
-            <span class="block font-black text-lg leading-none">إضافة مصدر</span>
-            <span class="block text-[9px] text-white/30 uppercase tracking-widest font-bold">Upload Files</span>
-          </div>
-        </button>
+      <section class="mt-6 glass rounded-[2rem] p-6 md:p-8 text-center relative overflow-hidden">
+        <div class="relative z-10">
+          <h3 class="text-xl md:text-2xl font-black mb-2">شاركنا مصادرك الدراسية</h3>
+          <button id="openUploadBtn" class="mt-6 btn-ghost rounded-2xl py-4 px-10 flex items-center gap-4 group mx-auto">
+            <div class="w-10 h-10 rounded-xl bg-indigo-500/20 flex items-center justify-center text-indigo-400 group-hover:scale-110 transition">
+              <i class="fa-solid fa-cloud-arrow-up text-lg"></i>
+            </div>
+            <div class="text-right">
+              <span class="block font-black text-lg">إضافة مصدر</span>
+              <span class="block text-[9px] text-white/30 uppercase tracking-widest">Upload Files</span>
+            </div>
+          </button>
+        </div>
       </section>
     </div>
   </main>
 
-  <footer class="mt-auto py-8 border-t border-white/5 bg-black/20 text-center">
-      <p class="text-[10px] text-white/20 uppercase tracking-[0.35em]">Designed & Developed by <span class="text-indigo-400/80">Alrasasi</span> &copy; 2026</p>
+  <footer class="mt-6 py-8 border-t border-white/5 bg-black/20">
+    <div class="max-w-5xl mx-auto px-6 text-center">
+      <p class="text-[10px] text-white/20 uppercase tracking-[0.35em]">Designed by <span class="text-indigo-400">Alrasasi</span> &copy; 2026</p>
+      <div class="disclaimer mt-4">هذا الموقع مبادرة طلابية مساعدة وليس جهة رسمية.</div>
+    </div>
   </footer>
 
   <script src="assets/js/app.js"></script>
