--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="flex justify-between items-center mb-5">
           <div>
             <h3 class="text-xl md:text-2xl font-black italic">ملفات ومراجع</h3>
-            <p class="text-[9px] text-white/40 font-bold uppercase tracking-widest mt-1">EE Resources Lab</p>
+            <p class="text-[9px] text-white/40 font-bold uppercase tracking-widest mt-1">EE Resources </p>
           </div>
           <span class="text-[9px] bg-indigo-500/10 text-indigo-400 px-3 py-1 rounded-full border border-indigo-500/20 font-bold">تحديث مستمر</span>
         </div>
@@ -345,7 +345,7 @@
 
       <p class="text-[10px] font-medium text-white/20 uppercase tracking-[0.35em] text-center leading-relaxed mt-2">
         Designed & Developed by <br class="sm:hidden">
-        <span class="text-indigo-400/80 hover:text-indigo-400 transition-colors cursor-pointer">Alrasasi</span>
+        <span class="text-indigo-400/80 hover:text-indigo-400 transition-colors cursor-pointer">Al-Rasasi</span>
         &copy; 2026
       </p>
 
