--- a/index.html
+++ b/index.html
@@ -306,8 +306,9 @@
           <input type="text" name="subject" required class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm focus:border-indigo-500 outline-none" placeholder="اسم المادة">
           <input type="text" name="note" class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 text-sm focus:border-indigo-500 outline-none" placeholder="رابط خارجي أو ملاحظة">
           <div class="border border-dashed border-white/10 rounded-xl p-4 text-center">
-            <input type="file" name="file" class="text-xs text-white/40 w-full cursor-pointer" accept="application/pdf">
+            <input type="file" name="file" multiple class="text-xs text-white/40 w-full cursor-pointer" accept="application/pdf">
           </div>
+          
           <button type="submit" class="btn-brand w-full py-4 rounded-xl font-black text-sm" id="submitBtn">
             إرسال للمراجعة
           </button>
