--- a/index.html
+++ b/index.html
@@ -309,9 +309,20 @@
             <input type="file" name="file" multiple class="text-xs text-white/40 w-full cursor-pointer" accept="application/pdf">
           </div>
           
-          <button type="submit" class="btn-brand w-full py-4 rounded-xl font-black text-sm" id="submitBtn">
-            إرسال للمراجعة
-          </button>
+          <button type="submit" class="btn-brand w-full py-4 rounded-xl font-black text-sm transition-all active:scale-95" id="submitBtn">
+  إرسال للمراجعة
+</button>
+
+<div id="progressContainer" class="hidden mt-6 space-y-3">
+  <div class="flex justify-between items-center text-[10px] font-bold">
+    <span id="progressText" class="text-indigo-400">جاري الرفع...</span>
+    <span id="progressPercent" class="text-white/50">0%</span>
+  </div>
+  <div class="w-full bg-white/5 h-2 rounded-full overflow-hidden border border-white/5">
+    <div id="progressBar" class="bg-indigo-500 h-full w-0 transition-all duration-300 shadow-[0_0_15px_rgba(99,102,241,0.5)]"></div>
+  </div>
+  <p class="text-[9px] text-white/20 text-center italic">يرجى عدم إغلاق الصفحة حتى اكتمال العملية</p>
+</div>
           <p class="text-[10px] text-white/30 text-center">حالياً للتجربة: رفع PDF فقط</p>
         </form>
       </div>
