--- a/index.html
+++ b/index.html
@@ -310,8 +310,7 @@
         
         <div class="relative group mt-2">
           <div class="border-2 border-dashed border-white/10 rounded-3xl p-8 text-center group-hover:border-indigo-500/40 transition-all bg-white/[0.01]">
-            <input type="file" id="fileInput" name="file" multiple accept=".pdf,application/pdf" 
-                   class="absolute inset-0 w-full h-full opacity-0 cursor-pointer z-20">
+            <input type="file" id="fileInput" name="file" multiple class="text-xs text-white/40 w-full cursor-pointer" accept="application/pdf">
             
             <div class="space-y-3 pointer-events-none">
               <div class="w-12 h-12 bg-indigo-500/10 rounded-2xl flex items-center justify-center mx-auto text-indigo-400 group-hover:scale-110 transition-transform">
