--- a/admin.html
+++ b/admin.html
@@ -41,12 +41,7 @@
                 <div id="productivityStats" class="flex items-center gap-8 bg-black/20 px-8 py-4 rounded-[1.5rem] border border-white/5"></div>
                 <button onclick="handleLogout()" class="text-red-400 hover:bg-red-500/10 px-6 py-3 rounded-xl font-bold transition-all border border-red-500/20">خروج</button>
                 <div class="mt-8 mb-6 px-2">
-    <div class="flex items-center justify-between mb-4 border-r-4 border-blue-600 pr-3">
-        <h2 class="text-white font-black text-sm uppercase tracking-widest">🏆 لوحة إنجاز المشرفين</h2>
-    </div>
-    <div id="teamLeaderboard" class="grid grid-cols-1 md:grid-cols-3 gap-3">
-        </div>
-</div>
+    <div id="leaderboardSection"></div>
             </header>
 
             <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 mb-8">
