--- a/admin.html
+++ b/admin.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>نظام المراجعة الذكي</title>
+    <title>نظام المراجعة الذكي | لوحة التحكم</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style>body { font-family: 'Cairo', sans-serif; }</style>
 </head>
-<body class="bg-[#020617] text-slate-200 min-h-screen">
+<body class="bg-[#020617] text-slate-200 min-h-screen pb-20">
 
     <div id="toastContainer" class="fixed top-5 left-5 z-[100] space-y-3"></div>
 
     <main class="max-w-[1400px] mx-auto p-4 md:p-8">
         
-        <section id="loginCard" class="max-w-md mx-auto mt-20 p-8 md:p-12 rounded-[2.5rem] bg-slate-900/50 border border-white/10 backdrop-blur-xl shadow-2xl transition-all duration-500">
-            <div class="text-6xl mb-6 text-center">🛡️</div>
+        <section id="loginCard" class="max-w-md mx-auto mt-20 p-8 md:p-12 rounded-[3rem] bg-slate-900/50 border border-white/10 backdrop-blur-xl shadow-2xl transition-all duration-500">
+            <div class="text-6xl mb-6 text-center italic font-black text-blue-500">EE</div>
             <h2 class="text-3xl font-black text-center mb-2 bg-gradient-to-r from-blue-400 to-indigo-400 bg-clip-text text-transparent">بوابة المشرفين</h2>
-            <p class="text-slate-500 text-center mb-8 font-medium">الرجاء تسجيل الدخول لإدارة المحتوى</p>
+            <p class="text-slate-500 text-center mb-8 font-medium italic text-sm text-balance">نظام إدارة ومراجعة المحتوى التعليمي</p>
             <form id="loginForm" class="space-y-4">
                 <input type="email" id="email" placeholder="البريد الإلكتروني" class="w-full bg-black/20 border border-slate-700 p-4 rounded-2xl focus:ring-2 focus:ring-blue-500 outline-none transition-all" required>
                 <input type="password" id="password" placeholder="كلمة المرور" class="w-full bg-black/20 border border-slate-700 p-4 rounded-2xl focus:ring-2 focus:ring-blue-500 outline-none transition-all" required>
@@ -29,44 +30,64 @@
             </form>
         </section>
 
-        <section id="adminPanel" class="hidden animate-in fade-in duration-700">
-            <header class="flex flex-col md:flex-row gap-6 items-center justify-between mb-10 p-6 rounded-[2rem] bg-slate-900/40 border border-white/5 backdrop-blur-md">
+        <section id="adminPanel" class="hidden animate-in fade-in slide-in-from-bottom-4 duration-700">
+            <header class="flex flex-col md:flex-row gap-6 items-center justify-between mb-8 p-6 rounded-[2.5rem] bg-slate-900/40 border border-white/5 backdrop-blur-md">
                 <div class="flex items-center gap-5">
                     <div class="relative">
-                        <div class="w-16 h-16 bg-gradient-to-br from-blue-500 to-purple-600 rounded-2xl rotate-3 shadow-lg flex items-center justify-center text-3xl">👨‍💻</div>
-                        <span class="absolute -bottom-1 -right-1 flex h-4 w-4"><span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span><span class="relative inline-flex rounded-full h-4 w-4 bg-green-500"></span></span>
+                        <div class="w-16 h-16 bg-gradient-to-br from-blue-500 to-indigo-600 rounded-2xl rotate-3 shadow-lg flex items-center justify-center text-3xl">👨‍💻</div>
+                        <span class="absolute -bottom-1 -right-1 flex h-4 w-4">
+                            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
+                            <span class="relative inline-flex rounded-full h-4 w-4 bg-green-500"></span>
+                        </span>
                     </div>
                     <div id="whoami"></div>
                 </div>
                 <div id="productivityStats" class="flex items-center gap-8 bg-black/20 px-8 py-4 rounded-[1.5rem] border border-white/5"></div>
-                <button onclick="handleLogout()" class="text-red-400 hover:bg-red-500/10 px-6 py-3 rounded-xl font-bold transition-all border border-red-500/20">خروج</button>
-                <div class="mt-8 mb-6 px-2">
-    <div id="leaderboardSection"></div>
+                <button onclick="handleLogout()" class="text-rose-400 hover:bg-rose-500/10 px-6 py-3 rounded-xl font-bold transition-all border border-rose-500/20">خروج</button>
             </header>
 
-            <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 mb-8">
-                <div class="lg:col-span-5 flex bg-slate-900/80 p-1.5 rounded-2xl border border-slate-800">
-                    <button class="filterBtn flex-1 py-3 text-xs font-black rounded-xl transition-all bg-blue-600 shadow-lg" data-filter="pending">بانتظار المراجعة</button>
-                    <button class="filterBtn flex-1 py-3 text-xs font-black rounded-xl transition-all text-slate-400" data-filter="reviewing">قيد المراجعة</button>
-                    <button class="filterBtn flex-1 py-3 text-xs font-black rounded-xl transition-all text-slate-400" data-filter="approved">تم النشر ✅</button>
+            <div class="mb-10 bg-slate-900/40 p-8 rounded-[2.5rem] border border-white/5 relative overflow-hidden group shadow-2xl">
+                <div class="flex justify-between items-end mb-4">
+                    <div>
+                        <h3 class="text-[10px] font-black uppercase tracking-[0.2em] text-blue-400 mb-1">Overall Progress</h3>
+                        <p class="text-white font-black text-2xl tracking-tighter">إجمالي إنجاز الفريق</p>
+                    </div>
+                    <span id="progressText" class="text-3xl font-black text-white italic">0%</span>
                 </div>
-                <div class="lg:col-span-4 relative">
-                    <input type="text" id="searchBox" placeholder="ابحث بالعنوان..." class="w-full bg-slate-900 border border-slate-800 p-4 pr-12 rounded-2xl focus:border-blue-500 outline-none transition-all shadow-xl">
-                    <span class="absolute right-4 top-4 opacity-30">🔍</span>
-                </div>
-                <div class="lg:col-span-3 bg-blue-600/10 border border-blue-500/20 rounded-2xl flex items-center justify-center font-black">
-                    إجمالي الملفات: <span id="totalCount" class="mr-3 text-2xl text-blue-400 font-black">0</span>
+                <div class="w-full bg-black/40 h-4 rounded-full p-1 border border-white/5 shadow-inner">
+                    <div id="progressBar" class="h-full bg-gradient-to-r from-blue-600 via-indigo-500 to-emerald-500 rounded-full transition-all duration-1000 relative shadow-[0_0_20px_rgba(37,99,235,0.3)]" style="width: 0%">
+                        <div class="absolute inset-0 bg-white/20 animate-pulse rounded-full"></div>
+                    </div>
                 </div>
             </div>
 
-            <div class="overflow-hidden">
+            <div id="leaderboardSection" class="mb-10"></div>
+
+            <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 mb-8 items-center">
+                <div class="lg:col-span-5 flex bg-slate-900/80 p-1.5 rounded-2xl border border-slate-800 shadow-2xl">
+                    <button class="filterBtn flex-1 py-3 text-xs font-black rounded-xl transition-all bg-blue-600 shadow-lg text-white" data-filter="pending">المعلق</button>
+                    <button class="filterBtn flex-1 py-3 text-xs font-black rounded-xl transition-all text-slate-400" data-filter="reviewing">قيد المراجعة</button>
+                    <button class="filterBtn flex-1 py-3 text-xs font-black rounded-xl transition-all text-slate-400" data-filter="approved">تم الاعتماد ✅</button>
+                </div>
+                <div class="lg:col-span-4 relative">
+                    <input type="text" id="searchBox" placeholder="ابحث بالعنوان أو الطالب..." class="w-full bg-slate-900 border border-slate-800 p-4 pr-12 rounded-2xl focus:border-blue-500 outline-none transition-all shadow-xl text-sm">
+                    <span class="absolute right-4 top-4 opacity-30 text-xl">🔍</span>
+                </div>
+                <div class="lg:col-span-3 bg-indigo-600/10 border border-indigo-500/20 p-4 rounded-2xl flex items-center justify-between font-black">
+                    <span class="text-xs text-indigo-300 uppercase">Total Items</span>
+                    <span id="totalCount" class="text-2xl text-white font-black leading-none">0</span>
+                </div>
+            </div>
+
+            <div class="overflow-visible">
                 <table class="w-full hidden lg:table border-separate border-spacing-y-4">
                     <thead>
-                        <tr class="text-xs text-slate-500 font-black uppercase tracking-widest text-right">
-                            <th class="px-6 pb-2">الملف</th>
-                            <th class="px-6 pb-2">ملاحظات اللجنة</th>
-                            <th class="px-6 pb-2 text-center">المسؤول</th>
-                            <th class="px-6 pb-2 text-left">الإجراءات</th>
+                        <tr class="text-[10px] text-slate-500 font-black uppercase tracking-widest text-right px-6">
+                            <th class="px-8 pb-2">تفاصيل الملف والطالب</th>
+                            <th class="px-8 pb-2">النوع</th>
+                            <th class="px-8 pb-2">ملاحظات الإدارة</th>
+                            <th class="px-8 pb-2 text-center">المسؤول</th>
+                            <th class="px-8 pb-2 text-left">الإجراءات</th>
                         </tr>
                     </thead>
                     <tbody id="desktopList"></tbody>
@@ -76,6 +97,6 @@
         </section>
     </main>
 
-    <script src="assets/js/admin.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
