--- a/admin.html
+++ b/admin.html
@@ -97,6 +97,6 @@
         </section>
     </main>
 
-    <script src="admin.js"></script>
+    <script src="assets/js/admin.js"></script>
 </body>
 </html>
