--- a/index.html
+++ b/index.html
@@ -23,34 +23,16 @@
 </head>
 
 <body class="flex flex-col overflow-x-hidden">
-  // تحديد العناصر من الصفحة
-const sidebar = document.getElementById('sidebar');
-const openSidebarBtn = document.getElementById('openSidebar');
-const closeSidebarBtn = document.getElementById('closeSidebar');
-const overlay = document.getElementById('overlay');
-
-// وظيفة لفتح القائمة
-function openMenu() {
-    sidebar.classList.remove('translate-x-full'); // إزالة الإزاحة لليمين ليظهر
-    overlay.classList.remove('hidden');           // إظهار الخلفية المظلمة
-}
-
-// وظيفة لإغلاق القائمة
-function closeMenu() {
-    sidebar.classList.add('translate-x-full');    // إعادة الإزاحة لليمين ليختفي
-    overlay.classList.add('hidden');              // إخفاء الخلفية المظلمة
-}
-
-// ربط الأزرار بالوظائف
-openSidebarBtn.addEventListener('click', openMenu);
-closeSidebarBtn.addEventListener('click', closeMenu);
-overlay.addEventListener('click', closeMenu); // إغلاق عند الضغط خارج القائمة
-
+  
   <div id="overlay" class="fixed inset-0 bg-black/60 hidden z-40" aria-hidden="true"></div>
 
+  <!-- Overlay -->
+  <div id="overlay" class="fixed inset-0 bg-black/60 hidden z-40" aria-hidden="true"></div>
+
+  <!-- Sidebar -->
   <aside id="sidebar"
-    class="fixed top-0 right-0 h-full w-80 max-w-[85vw] translate-x-full transition-transform duration-300 z-50 glass flex flex-col"
-    role="dialog" aria-modal="true" aria-labelledby="sidebarTitle">
+  class="fixed top-0 right-0 h-full w-80 max-w-[85vw] translate-x-full transition-transform duration-300 z-50 glass flex flex-col"
+  role="dialog" aria-modal="true" aria-labelledby="sidebarTitle">
 
     <div class="p-6">
       <div class="flex items-center justify-between mb-8">
@@ -411,6 +393,7 @@ overlay.addEventListener('click', closeMenu); // إغلاق عند الضغط خ
   <script src="assets/js/app.js"></script>
 </body>
 </html>
+
 
 
 
