--- a/index.html
+++ b/index.html
@@ -72,10 +72,19 @@
           <span class="text-sm font-medium">EE Flowchart</span>
         </a>
 
-         <a href="examss.html" class="flex items-center gap-3 px-4 py-3 rounded-2xl hover:bg-white/5 transition group">
-        <i class="fa-solid fa-calendar-check text-indigo-300/70 group-hover:text-indigo-300 w-5 text-center transition-colors" aria-hidden="true"></i>
-        <span class="text-sm font-medium">جدول الإختبارات</span>
-      </a>
+         <div class="flex items-center justify-between px-4 py-3 rounded-2xl opacity-40 cursor-not-allowed group relative">
+  <div class="flex items-center gap-3">
+    <div class="relative">
+      <i class="fa-solid fa-calendar-check text-indigo-300/50 w-5 text-center" aria-hidden="true"></i>
+      <i class="fa-solid fa-lock absolute -top-2 -right-2 text-[8px] text-amber-500"></i>
+    </div>
+    <span class="text-sm font-medium text-white/50">جدول الإختبارات</span>
+  </div>
+  
+  <span class="hidden group-hover:block absolute left-4 bg-amber-500/20 text-amber-500 text-[9px] px-2 py-0.5 rounded-lg border border-amber-500/30">
+    قريباً
+  </span>
+</div>
 
         <div class="py-3"><hr class="border-white/5"></div>
 
@@ -420,6 +429,7 @@
   <script src="assets/js/app.js"></script>
 </body>
 </html>
+
 
 
 
