--- a/schedule.html
+++ b/schedule.html
@@ -126,12 +126,16 @@
 <script>
   // أوقات الجدول العادي (12 ساعة)
   const TIME_SLOTS = [
-    { id: "54", s: "07:15", e: "08:05" }, { id: "86", s: "08:15", e: "09:05" },
-    { id: "44", s: "09:15", e: "10:05" }, { id: "80", s: "10:15", e: "11:05" },
-    { id: "47", s: "12:15", e: "01:05" }, { id: "63", s: "01:15", e: "02:05" },
-    { id: "52", s: "02:15", e: "03:05" }, { id: "51", s: "03:15", e: "04:05" },
-    { id: "59", s: "04:15", e: "05:05" }, { id: "60", s: "05:15", e: "06:05" }
-  ];
+  { id: "54", s: "07:15", e: "08:05" },
+  { id: "86", s: "08:15", e: "09:05" },
+  { id: "44", s: "09:15", e: "10:05" },
+  { id: "80", s: "10:15", e: "11:05" },
+  { id: "57", s: "11:15", e: "12:05" }, // الفترة التي كانت ناقصة
+  { id: "47", s: "12:15", e: "13:05" },
+  { id: "63", s: "13:15", e: "14:05" },
+  { id: "52", s: "14:15", e: "15:05" },
+  { id: "51", s: "15:15", e: "16:05" }
+];
 
   // أوقات الجدول الرمضاني (12 ساعة)
   const RAMADAN_SLOTS = [
