--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>Engineering Vision | جدول ذكي</title>
+  <title>Engineering Vision | انشئ جدولك</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   
@@ -175,8 +175,8 @@
 
     if(isRamadanMode) {
         btn.classList.replace("bg-slate-800", "bg-emerald-600");
-        document.getElementById("ramadan-text").innerText = "وضع رمضان نشط 🌙";
-        noteText.innerText = "✅ تم تفعيل توقيت رمضان بنجاح.";
+        document.getElementById("ramadan-text").innerText = "وضع شهر رمضان نشط 🌙";
+        noteText.innerText = "✅ تم تفعيل توقيت شهر رمضان بنجاح.";
         noteText.classList.replace("text-blue-800", "text-emerald-700");
         subLabel.innerText = "توقيت شهر رمضان المبارك (12H)";
         area.classList.add("ramadan-mode-active");
