--- a/Exams.html
+++ b/Exams.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <title>YIC Smart Exams - PRO</title>
+   <title>منصة جداول الاختبارات | نادي الهندسة الكهربائية</title>
+
+<link rel="icon" href="https://img.icons8.com/ios-filled/50/8042ff/lightning-bolt.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;500;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js"></script>
